3-ns/paperless/ingress-peluan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ing-peluan
  namespace: paperless
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public
  rules:
  - host: paperless.peluan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-ngx
            port:
              number: 8000
  tls:
  - hosts:
    - paperless.peluan.com
    secretName: peluan-wildcard-tls
